feat(lint):  apply spotless SaaS (#2159)