@@ -1,23 +1,33 @@
 package com.linkedin.metadata.search.query.request;
 
+import static com.linkedin.datahub.graphql.resolvers.search.SearchUtils.AUTO_COMPLETE_ENTITY_TYPES;
+import static com.linkedin.datahub.graphql.resolvers.search.SearchUtils.SEARCHABLE_ENTITY_TYPES;
+import static com.linkedin.metadata.search.elasticsearch.indexbuilder.SettingsBuilder.TEXT_SEARCH_ANALYZER;
+import static com.linkedin.metadata.search.elasticsearch.indexbuilder.SettingsBuilder.URN_SEARCH_ANALYZER;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
+import static org.testng.Assert.assertNull;
+import static org.testng.Assert.assertTrue;
+
+import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
+import com.google.common.collect.ImmutableList;
 import com.linkedin.data.schema.DataSchema;
 import com.linkedin.data.schema.PathSpec;
-import com.linkedin.metadata.search.elasticsearch.query.request.SearchFieldConfig;
-import com.linkedin.metadata.search.elasticsearch.query.request.SearchQueryBuilder;
-import io.datahubproject.test.search.config.SearchCommonTestConfiguration;
+import com.linkedin.metadata.TestEntitySpecBuilder;
 import com.linkedin.metadata.config.search.CustomConfiguration;
 import com.linkedin.metadata.config.search.ExactMatchConfiguration;
 import com.linkedin.metadata.config.search.PartialConfiguration;
 import com.linkedin.metadata.config.search.SearchConfiguration;
 import com.linkedin.metadata.config.search.WordGramConfiguration;
 import com.linkedin.metadata.config.search.custom.CustomSearchConfiguration;
-import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
-import com.google.common.collect.ImmutableList;
-import com.linkedin.metadata.TestEntitySpecBuilder;
-
 import com.linkedin.metadata.models.EntitySpec;
 import com.linkedin.metadata.models.SearchableFieldSpec;
 import com.linkedin.metadata.models.annotation.SearchableAnnotation;
+import com.linkedin.metadata.models.registry.EntityRegistry;
+import com.linkedin.metadata.search.elasticsearch.query.request.SearchFieldConfig;
+import com.linkedin.metadata.search.elasticsearch.query.request.SearchQueryBuilder;
+import com.linkedin.util.Pair;
+import io.datahubproject.test.search.config.SearchCommonTestConfiguration;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -27,9 +37,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import com.linkedin.metadata.models.registry.EntityRegistry;
-import com.linkedin.util.Pair;
+import org.mockito.Mockito;
 import org.opensearch.index.query.BoolQueryBuilder;
 import org.opensearch.index.query.MatchAllQueryBuilder;
 import org.opensearch.index.query.MatchPhrasePrefixQueryBuilder;
@@ -40,28 +48,18 @@ import org.opensearch.index.query.SimpleQueryStringBuilder;
 import org.opensearch.index.query.TermQueryBuilder;
 import org.opensearch.index.query.functionscore.FieldValueFactorFunctionBuilder;
 import org.opensearch.index.query.functionscore.FunctionScoreQueryBuilder;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Import;
 import org.springframework.test.context.testng.AbstractTestNGSpringContextTests;
 import org.testng.annotations.Test;
 
-import static com.linkedin.datahub.graphql.resolvers.search.SearchUtils.AUTO_COMPLETE_ENTITY_TYPES;
-import static com.linkedin.datahub.graphql.resolvers.search.SearchUtils.SEARCHABLE_ENTITY_TYPES;
-import static com.linkedin.metadata.search.elasticsearch.indexbuilder.SettingsBuilder.TEXT_SEARCH_ANALYZER;
-import static com.linkedin.metadata.search.elasticsearch.indexbuilder.SettingsBuilder.URN_SEARCH_ANALYZER;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertFalse;
-import static org.testng.Assert.assertNull;
-import static org.testng.Assert.assertTrue;
-
 @Import(SearchCommonTestConfiguration.class)
 public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
 
-  @Autowired
-  private EntityRegistry entityRegistry;
+  @Autowired private EntityRegistry entityRegistry;
 
   public static SearchConfiguration testQueryConfig;
+
   static {
     testQueryConfig = new SearchConfiguration();
     testQueryConfig.setMaxTermBucketSize(20);
@@ -87,25 +85,31 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
     testQueryConfig.setWordGram(wordGramConfiguration);
     testQueryConfig.setPartial(partialConfiguration);
   }
-  public static final SearchQueryBuilder TEST_BUILDER = new SearchQueryBuilder(testQueryConfig, null);
+
+  public static final SearchQueryBuilder TEST_BUILDER =
+      new SearchQueryBuilder(testQueryConfig, null);
 
   @Test
   public void testQueryBuilderFulltext() {
     FunctionScoreQueryBuilder result =
-            (FunctionScoreQueryBuilder) TEST_BUILDER.buildQuery(ImmutableList.of(TestEntitySpecBuilder.getSpec()), "testQuery",
-                    true);
+        (FunctionScoreQueryBuilder)
+            TEST_BUILDER.buildQuery(
+                ImmutableList.of(TestEntitySpecBuilder.getSpec()), "testQuery", true);
     BoolQueryBuilder mainQuery = (BoolQueryBuilder) result.query();
     List<QueryBuilder> shouldQueries = mainQuery.should();
     assertEquals(shouldQueries.size(), 2);
 
     BoolQueryBuilder analyzerGroupQuery = (BoolQueryBuilder) shouldQueries.get(0);
 
-    SimpleQueryStringBuilder keywordQuery = (SimpleQueryStringBuilder) analyzerGroupQuery.should().get(0);
+    SimpleQueryStringBuilder keywordQuery =
+        (SimpleQueryStringBuilder) analyzerGroupQuery.should().get(0);
     assertEquals(keywordQuery.value(), "testQuery");
     assertEquals(keywordQuery.analyzer(), "keyword");
     Map<String, Float> keywordFields = keywordQuery.fields();
     assertEquals(keywordFields.size(), 9);
-    assertEquals(keywordFields, Map.of(
+    assertEquals(
+        keywordFields,
+        Map.of(
             "urn", 10.f,
             "textArrayField", 1.0f,
             "customProperties", 1.0f,
@@ -114,21 +118,25 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
             "textFieldOverride", 1.0f,
             "nestedArrayStringField", 1.0f,
             "keyPart1", 10.0f,
-            "esObjectField", 1.0f
-    ));
+            "esObjectField", 1.0f));
 
-    SimpleQueryStringBuilder urnComponentQuery = (SimpleQueryStringBuilder) analyzerGroupQuery.should().get(1);
+    SimpleQueryStringBuilder urnComponentQuery =
+        (SimpleQueryStringBuilder) analyzerGroupQuery.should().get(1);
     assertEquals(urnComponentQuery.value(), "testQuery");
     assertEquals(urnComponentQuery.analyzer(), URN_SEARCH_ANALYZER);
-    assertEquals(urnComponentQuery.fields(), Map.of(
+    assertEquals(
+        urnComponentQuery.fields(),
+        Map.of(
             "nestedForeignKey", 1.0f,
-            "foreignKey", 1.0f
-    ));
+            "foreignKey", 1.0f));
 
-    SimpleQueryStringBuilder fulltextQuery = (SimpleQueryStringBuilder) analyzerGroupQuery.should().get(2);
+    SimpleQueryStringBuilder fulltextQuery =
+        (SimpleQueryStringBuilder) analyzerGroupQuery.should().get(2);
     assertEquals(fulltextQuery.value(), "testQuery");
     assertEquals(fulltextQuery.analyzer(), TEXT_SEARCH_ANALYZER);
-    assertEquals(fulltextQuery.fields(), Map.of(
+    assertEquals(
+        fulltextQuery.fields(),
+        Map.of(
             "textFieldOverride.delimited", 0.4f,
             "keyPart1.delimited", 4.0f,
             "nestedArrayArrayField.delimited", 0.4f,
@@ -137,25 +145,30 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
             "nestedArrayStringField.delimited", 0.4f,
             "wordGramField.delimited", 0.4f,
             "customProperties.delimited", 0.4f // Saas only?
-    ));
+            ));
 
     BoolQueryBuilder boolPrefixQuery = (BoolQueryBuilder) shouldQueries.get(1);
     assertTrue(boolPrefixQuery.should().size() > 0);
 
-    List<Pair<String, Float>> prefixFieldWeights = boolPrefixQuery.should().stream().map(prefixQuery -> {
-      if (prefixQuery instanceof MatchPhrasePrefixQueryBuilder) {
-        MatchPhrasePrefixQueryBuilder builder = (MatchPhrasePrefixQueryBuilder) prefixQuery;
-        return Pair.of(builder.fieldName(), builder.boost());
-      } else if (prefixQuery instanceof TermQueryBuilder) {
-        // exact
-        TermQueryBuilder builder = (TermQueryBuilder) prefixQuery;
-        return Pair.of(builder.fieldName(), builder.boost());
-      } else { // if (prefixQuery instanceof MatchPhraseQueryBuilder) {
-        // ngram
-        MatchPhraseQueryBuilder builder = (MatchPhraseQueryBuilder) prefixQuery;
-        return Pair.of(builder.fieldName(), builder.boost());
-      }
-    }).collect(Collectors.toList());
+    List<Pair<String, Float>> prefixFieldWeights =
+        boolPrefixQuery.should().stream()
+            .map(
+                prefixQuery -> {
+                  if (prefixQuery instanceof MatchPhrasePrefixQueryBuilder) {
+                    MatchPhrasePrefixQueryBuilder builder =
+                        (MatchPhrasePrefixQueryBuilder) prefixQuery;
+                    return Pair.of(builder.fieldName(), builder.boost());
+                  } else if (prefixQuery instanceof TermQueryBuilder) {
+                    // exact
+                    TermQueryBuilder builder = (TermQueryBuilder) prefixQuery;
+                    return Pair.of(builder.fieldName(), builder.boost());
+                  } else { // if (prefixQuery instanceof MatchPhraseQueryBuilder) {
+                    // ngram
+                    MatchPhraseQueryBuilder builder = (MatchPhraseQueryBuilder) prefixQuery;
+                    return Pair.of(builder.fieldName(), builder.boost());
+                  }
+                })
+            .collect(Collectors.toList());
 
     assertEquals(prefixFieldWeights.size(), 29);
 
@@ -169,19 +182,21 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
             Pair.of("wordGramField.wordGrams3", 2.25f),
             Pair.of("wordGramField.wordGrams4", 3.2399998f),
             Pair.of("wordGramField.keyword", 10.0f),
-            Pair.of("wordGramField.keyword", 7.0f)
-    ).forEach(p -> assertTrue(prefixFieldWeights.contains(p), "Missing: " + p));
+            Pair.of("wordGramField.keyword", 7.0f))
+        .forEach(p -> assertTrue(prefixFieldWeights.contains(p), "Missing: " + p));
 
     // Validate scorer
-    FunctionScoreQueryBuilder.FilterFunctionBuilder[] scoringFunctions = result.filterFunctionBuilders();
+    FunctionScoreQueryBuilder.FilterFunctionBuilder[] scoringFunctions =
+        result.filterFunctionBuilders();
     assertEquals(scoringFunctions.length, 3);
   }
 
   @Test
   public void testQueryBuilderStructured() {
     FunctionScoreQueryBuilder result =
-            (FunctionScoreQueryBuilder) TEST_BUILDER.buildQuery(ImmutableList.of(TestEntitySpecBuilder.getSpec()),
-                    "testQuery", false);
+        (FunctionScoreQueryBuilder)
+            TEST_BUILDER.buildQuery(
+                ImmutableList.of(TestEntitySpecBuilder.getSpec()), "testQuery", false);
     BoolQueryBuilder mainQuery = (BoolQueryBuilder) result.query();
     List<QueryBuilder> shouldQueries = mainQuery.should();
     assertEquals(shouldQueries.size(), 2);
@@ -198,17 +213,20 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
     assertEquals(keywordFields.get("esObjectField").floatValue(), 1.0f);
 
     // Validate scorer
-    FunctionScoreQueryBuilder.FilterFunctionBuilder[] scoringFunctions = result.filterFunctionBuilders();
+    FunctionScoreQueryBuilder.FilterFunctionBuilder[] scoringFunctions =
+        result.filterFunctionBuilders();
     assertEquals(scoringFunctions.length, 3);
   }
 
   private static final SearchQueryBuilder TEST_CUSTOM_BUILDER;
+
   static {
     try {
       CustomConfiguration customConfiguration = new CustomConfiguration();
       customConfiguration.setEnabled(true);
       customConfiguration.setFile("search_config_builder_test.yml");
-      CustomSearchConfiguration customSearchConfiguration = customConfiguration.resolve(new YAMLMapper());
+      CustomSearchConfiguration customSearchConfiguration =
+          customConfiguration.resolve(new YAMLMapper());
       TEST_CUSTOM_BUILDER = new SearchQueryBuilder(testQueryConfig, customSearchConfiguration);
     } catch (IOException e) {
       throw new RuntimeException(e);
@@ -219,21 +237,31 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
   public void testCustomSelectAll() {
     // "explore" query: empty or * query
     for (String triggerQuery : List.of("*", "")) {
-      FunctionScoreQueryBuilder result = (FunctionScoreQueryBuilder) TEST_CUSTOM_BUILDER
-              .buildQuery(ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
+      FunctionScoreQueryBuilder result =
+          (FunctionScoreQueryBuilder)
+              TEST_CUSTOM_BUILDER.buildQuery(
+                  ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
 
       BoolQueryBuilder mainQuery = (BoolQueryBuilder) result.query();
       List<QueryBuilder> shouldQueries = mainQuery.should();
       assertEquals(shouldQueries.size(), 0);
-      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders = result.filterFunctionBuilders();
+      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders =
+          result.filterFunctionBuilders();
       assertEquals(functionBuilders.length, 5);
       Set<String> fieldsWeighted = new HashSet<>();
       for (FunctionScoreQueryBuilder.FilterFunctionBuilder functionBuilder : functionBuilders) {
         if (functionBuilder.getScoreFunction() instanceof FieldValueFactorFunctionBuilder) {
-          fieldsWeighted.add(((FieldValueFactorFunctionBuilder) functionBuilder.getScoreFunction()).fieldName());
+          fieldsWeighted.add(
+              ((FieldValueFactorFunctionBuilder) functionBuilder.getScoreFunction()).fieldName());
         }
       }
-      assertEquals(Set.of("uniqueUserCountLast30Days", "usageCountLast30Days", "viewCountLast30Days", "rowCount"), fieldsWeighted);
+      assertEquals(
+          Set.of(
+              "uniqueUserCountLast30Days",
+              "usageCountLast30Days",
+              "viewCountLast30Days",
+              "rowCount"),
+          fieldsWeighted);
     }
   }
 
@@ -241,8 +269,10 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
   public void testCustomExactMatch() {
     // Exact match query (uses quotes)
     for (String triggerQuery : List.of("'single quoted'", "\"double quoted\"")) {
-      FunctionScoreQueryBuilder result = (FunctionScoreQueryBuilder) TEST_CUSTOM_BUILDER
-              .buildQuery(ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
+      FunctionScoreQueryBuilder result =
+          (FunctionScoreQueryBuilder)
+              TEST_CUSTOM_BUILDER.buildQuery(
+                  ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
 
       BoolQueryBuilder mainQuery = (BoolQueryBuilder) result.query();
       List<QueryBuilder> shouldQueries = mainQuery.should();
@@ -251,82 +281,112 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
       BoolQueryBuilder boolPrefixQuery = (BoolQueryBuilder) shouldQueries.get(0);
       assertTrue(boolPrefixQuery.should().size() > 0);
 
-      List<QueryBuilder> queries = boolPrefixQuery.should().stream().map(prefixQuery -> {
-        if (prefixQuery instanceof MatchPhrasePrefixQueryBuilder) {
-          // prefix
-          return (MatchPhrasePrefixQueryBuilder) prefixQuery;
-        } else if (prefixQuery instanceof TermQueryBuilder) {
-          // exact
-          return (TermQueryBuilder) prefixQuery;
-        } else { // if (prefixQuery instanceof MatchPhraseQueryBuilder) {
-          // ngram
-          return (MatchPhraseQueryBuilder) prefixQuery;
-        }
-      }).collect(Collectors.toList());
+      List<QueryBuilder> queries =
+          boolPrefixQuery.should().stream()
+              .map(
+                  prefixQuery -> {
+                    if (prefixQuery instanceof MatchPhrasePrefixQueryBuilder) {
+                      // prefix
+                      return (MatchPhrasePrefixQueryBuilder) prefixQuery;
+                    } else if (prefixQuery instanceof TermQueryBuilder) {
+                      // exact
+                      return (TermQueryBuilder) prefixQuery;
+                    } else { // if (prefixQuery instanceof MatchPhraseQueryBuilder) {
+                      // ngram
+                      return (MatchPhraseQueryBuilder) prefixQuery;
+                    }
+                  })
+              .collect(Collectors.toList());
 
       assertFalse(queries.isEmpty(), "Expected queries with specific types");
 
-      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders = result.filterFunctionBuilders();
+      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders =
+          result.filterFunctionBuilders();
       assertEquals(functionBuilders.length, 2);
       // Should not include Field Value functions for usage stats
-      assertFalse(Arrays.stream(functionBuilders).anyMatch(
-          filterFunctionBuilder -> filterFunctionBuilder.getScoreFunction() instanceof FieldValueFactorFunctionBuilder));
+      assertFalse(
+          Arrays.stream(functionBuilders)
+              .anyMatch(
+                  filterFunctionBuilder ->
+                      filterFunctionBuilder.getScoreFunction()
+                          instanceof FieldValueFactorFunctionBuilder));
     }
   }
 
   @Test
   public void testHighIntentQuery() {
-    for (String triggerQuery : List.of("db.table", "table_name", "table-name", "db_name.table_name")) {
-      FunctionScoreQueryBuilder result = (FunctionScoreQueryBuilder) TEST_CUSTOM_BUILDER
-          .buildQuery(ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
+    for (String triggerQuery :
+        List.of("db.table", "table_name", "table-name", "db_name.table_name")) {
+      FunctionScoreQueryBuilder result =
+          (FunctionScoreQueryBuilder)
+              TEST_CUSTOM_BUILDER.buildQuery(
+                  ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
 
       BoolQueryBuilder mainQuery = (BoolQueryBuilder) result.query();
       List<QueryBuilder> shouldQueries = mainQuery.should();
       assertEquals(shouldQueries.size(), 2, "should have two clauses for " + triggerQuery);
 
-      List<QueryBuilder> queries = mainQuery.should().stream().map(query -> {
-        if (query instanceof SimpleQueryStringBuilder) {
-          return (SimpleQueryStringBuilder) query;
-        } else if (query instanceof MatchAllQueryBuilder) {
-          // custom
-          return (MatchAllQueryBuilder) query;
-        } else {
-          // exact
-          return (BoolQueryBuilder) query;
-        }
-      }).collect(Collectors.toList());
+      List<QueryBuilder> queries =
+          mainQuery.should().stream()
+              .map(
+                  query -> {
+                    if (query instanceof SimpleQueryStringBuilder) {
+                      return (SimpleQueryStringBuilder) query;
+                    } else if (query instanceof MatchAllQueryBuilder) {
+                      // custom
+                      return (MatchAllQueryBuilder) query;
+                    } else {
+                      // exact
+                      return (BoolQueryBuilder) query;
+                    }
+                  })
+              .collect(Collectors.toList());
 
       assertEquals(queries.size(), 2, "Expected queries with specific types");
 
-      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders = result.filterFunctionBuilders();
-      assertEquals(functionBuilders.length, 2, "Expected no usage stats function scales for " + triggerQuery);
+      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders =
+          result.filterFunctionBuilders();
+      assertEquals(
+          functionBuilders.length,
+          2,
+          "Expected no usage stats function scales for " + triggerQuery);
       // Should not include Field Value functions for usage stats
-      assertFalse(Arrays.stream(functionBuilders).anyMatch(
-          filterFunctionBuilder -> filterFunctionBuilder.getScoreFunction() instanceof FieldValueFactorFunctionBuilder));
+      assertFalse(
+          Arrays.stream(functionBuilders)
+              .anyMatch(
+                  filterFunctionBuilder ->
+                      filterFunctionBuilder.getScoreFunction()
+                          instanceof FieldValueFactorFunctionBuilder));
     }
   }
 
   @Test
   public void testCustomDefault() {
     for (String triggerQuery : List.of("foo", "bar", "foo\"bar", "foo:bar")) {
-      FunctionScoreQueryBuilder result = (FunctionScoreQueryBuilder) TEST_CUSTOM_BUILDER
-              .buildQuery(ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
+      FunctionScoreQueryBuilder result =
+          (FunctionScoreQueryBuilder)
+              TEST_CUSTOM_BUILDER.buildQuery(
+                  ImmutableList.of(TestEntitySpecBuilder.getSpec()), triggerQuery, true);
 
       BoolQueryBuilder mainQuery = (BoolQueryBuilder) result.query();
       List<QueryBuilder> shouldQueries = mainQuery.should();
       assertEquals(shouldQueries.size(), 3);
 
-      List<QueryBuilder> queries = mainQuery.should().stream().map(query -> {
-        if (query instanceof SimpleQueryStringBuilder) {
-          return (SimpleQueryStringBuilder) query;
-        } else if (query instanceof MatchAllQueryBuilder) {
-          // custom
-          return (MatchAllQueryBuilder) query;
-        } else {
-          // exact
-          return (BoolQueryBuilder) query;
-        }
-      }).collect(Collectors.toList());
+      List<QueryBuilder> queries =
+          mainQuery.should().stream()
+              .map(
+                  query -> {
+                    if (query instanceof SimpleQueryStringBuilder) {
+                      return (SimpleQueryStringBuilder) query;
+                    } else if (query instanceof MatchAllQueryBuilder) {
+                      // custom
+                      return (MatchAllQueryBuilder) query;
+                    } else {
+                      // exact
+                      return (BoolQueryBuilder) query;
+                    }
+                  })
+              .collect(Collectors.toList());
 
       assertEquals(queries.size(), 3, "Expected queries with specific types");
 
@@ -338,53 +398,72 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
       assertEquals(termQueryBuilder.fieldName(), "fieldName");
       assertEquals(termQueryBuilder.value().toString(), triggerQuery);
 
-      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders = result.filterFunctionBuilders();
+      FunctionScoreQueryBuilder.FilterFunctionBuilder[] functionBuilders =
+          result.filterFunctionBuilders();
       assertEquals(functionBuilders.length, 6);
       Set<String> fieldsWeighted = new HashSet<>();
       for (FunctionScoreQueryBuilder.FilterFunctionBuilder functionBuilder : functionBuilders) {
         if (functionBuilder.getScoreFunction() instanceof FieldValueFactorFunctionBuilder) {
-          fieldsWeighted.add(((FieldValueFactorFunctionBuilder) functionBuilder.getScoreFunction()).fieldName());
+          fieldsWeighted.add(
+              ((FieldValueFactorFunctionBuilder) functionBuilder.getScoreFunction()).fieldName());
         }
       }
-      assertEquals(Set.of("uniqueUserCountLast30Days", "usageCountLast30Days", "viewCountLast30Days", "rowCount"), fieldsWeighted);
+      assertEquals(
+          Set.of(
+              "uniqueUserCountLast30Days",
+              "usageCountLast30Days",
+              "viewCountLast30Days",
+              "rowCount"),
+          fieldsWeighted);
     }
   }
 
-  /**
-   * Tests to make sure that the fields are correctly combined across search-able entities
-   */
+  /** Tests to make sure that the fields are correctly combined across search-able entities */
   @Test
   public void testGetStandardFieldsEntitySpec() {
-    List<EntitySpec> entitySpecs = Stream.concat(SEARCHABLE_ENTITY_TYPES.stream(), AUTO_COMPLETE_ENTITY_TYPES.stream())
+    List<EntitySpec> entitySpecs =
+        Stream.concat(SEARCHABLE_ENTITY_TYPES.stream(), AUTO_COMPLETE_ENTITY_TYPES.stream())
             .map(entityType -> entityType.toString().toLowerCase().replaceAll("_", ""))
             .map(entityRegistry::getEntitySpec)
             .collect(Collectors.toList());
     assertTrue(entitySpecs.size() > 30, "Expected at least 30 searchable entities in the registry");
 
     // Count of the distinct field names
-    Set<String> expectedFieldNames = Stream.concat(
-                    // Standard urn fields plus entitySpec sourced fields
-                    Stream.of("urn", "urn.delimited"),
-                    entitySpecs.stream()
-                            .flatMap(spec -> TEST_CUSTOM_BUILDER.getFieldsFromEntitySpec(spec).stream())
-                            .map(SearchFieldConfig::fieldName))
+    Set<String> expectedFieldNames =
+        Stream.concat(
+                // Standard urn fields plus entitySpec sourced fields
+                Stream.of("urn", "urn.delimited"),
+                entitySpecs.stream()
+                    .flatMap(spec -> TEST_CUSTOM_BUILDER.getFieldsFromEntitySpec(spec).stream())
+                    .map(SearchFieldConfig::fieldName))
             .collect(Collectors.toSet());
 
-    Set<String> actualFieldNames = TEST_CUSTOM_BUILDER.getStandardFields(entitySpecs).stream()
+    Set<String> actualFieldNames =
+        TEST_CUSTOM_BUILDER.getStandardFields(entitySpecs).stream()
             .map(SearchFieldConfig::fieldName)
             .collect(Collectors.toSet());
 
-    assertEquals(actualFieldNames, expectedFieldNames,
-            String.format("Missing: %s Extra: %s",
-                    expectedFieldNames.stream().filter(f -> !actualFieldNames.contains(f)).collect(Collectors.toSet()),
-                    actualFieldNames.stream().filter(f -> !expectedFieldNames.contains(f)).collect(Collectors.toSet())));
+    assertEquals(
+        actualFieldNames,
+        expectedFieldNames,
+        String.format(
+            "Missing: %s Extra: %s",
+            expectedFieldNames.stream()
+                .filter(f -> !actualFieldNames.contains(f))
+                .collect(Collectors.toSet()),
+            actualFieldNames.stream()
+                .filter(f -> !expectedFieldNames.contains(f))
+                .collect(Collectors.toSet())));
   }
 
   @Test
   public void testGetStandardFields() {
-    Set<SearchFieldConfig> fieldConfigs = TEST_CUSTOM_BUILDER.getStandardFields(ImmutableList.of(TestEntitySpecBuilder.getSpec()));
+    Set<SearchFieldConfig> fieldConfigs =
+        TEST_CUSTOM_BUILDER.getStandardFields(ImmutableList.of(TestEntitySpecBuilder.getSpec()));
     assertEquals(fieldConfigs.size(), 22);
-    assertEquals(fieldConfigs.stream().map(SearchFieldConfig::fieldName).collect(Collectors.toSet()), Set.of(
+    assertEquals(
+        fieldConfigs.stream().map(SearchFieldConfig::fieldName).collect(Collectors.toSet()),
+        Set.of(
             "nestedArrayArrayField",
             "esObjectField",
             "foreignKey",
@@ -408,45 +487,90 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
             "wordGramField.wordGrams2",
             "customProperties.delimited")); // customProperties.delimited Saas only
 
-    assertEquals(fieldConfigs.stream().filter(field -> field.fieldName().equals("keyPart1")).findFirst().map(SearchFieldConfig::boost), Optional.of(
-            10.0F));
-    assertEquals(fieldConfigs.stream().filter(field -> field.fieldName().equals("nestedForeignKey")).findFirst().map(SearchFieldConfig::boost), Optional.of(
-            1.0F));
-    assertEquals(fieldConfigs.stream().filter(field -> field.fieldName().equals("textFieldOverride")).findFirst().map(SearchFieldConfig::boost), Optional.of(
-            1.0F));
+    assertEquals(
+        fieldConfigs.stream()
+            .filter(field -> field.fieldName().equals("keyPart1"))
+            .findFirst()
+            .map(SearchFieldConfig::boost),
+        Optional.of(10.0F));
+    assertEquals(
+        fieldConfigs.stream()
+            .filter(field -> field.fieldName().equals("nestedForeignKey"))
+            .findFirst()
+            .map(SearchFieldConfig::boost),
+        Optional.of(1.0F));
+    assertEquals(
+        fieldConfigs.stream()
+            .filter(field -> field.fieldName().equals("textFieldOverride"))
+            .findFirst()
+            .map(SearchFieldConfig::boost),
+        Optional.of(1.0F));
 
     EntitySpec mockEntitySpec = Mockito.mock(EntitySpec.class);
-    Mockito.when(mockEntitySpec.getSearchableFieldSpecs()).thenReturn(List.of(
-            new SearchableFieldSpec(
+    Mockito.when(mockEntitySpec.getSearchableFieldSpecs())
+        .thenReturn(
+            List.of(
+                new SearchableFieldSpec(
                     Mockito.mock(PathSpec.class),
-                    new SearchableAnnotation("fieldDoesntExistInOriginal",
-                            SearchableAnnotation.FieldType.TEXT,
-                            true, true, false, false,
-                            Optional.empty(), Optional.empty(), 13.0,
-                            Optional.empty(), Optional.empty(), Map.of(), List.of()),
+                    new SearchableAnnotation(
+                        "fieldDoesntExistInOriginal",
+                        SearchableAnnotation.FieldType.TEXT,
+                        true,
+                        true,
+                        false,
+                        false,
+                        Optional.empty(),
+                        Optional.empty(),
+                        13.0,
+                        Optional.empty(),
+                        Optional.empty(),
+                        Map.of(),
+                        List.of()),
                     Mockito.mock(DataSchema.class)),
-            new SearchableFieldSpec(
+                new SearchableFieldSpec(
                     Mockito.mock(PathSpec.class),
-                    new SearchableAnnotation("keyPart1",
-                            SearchableAnnotation.FieldType.KEYWORD,
-                            true, true, false, false,
-                            Optional.empty(), Optional.empty(), 20.0,
-                            Optional.empty(), Optional.empty(), Map.of(), List.of()),
+                    new SearchableAnnotation(
+                        "keyPart1",
+                        SearchableAnnotation.FieldType.KEYWORD,
+                        true,
+                        true,
+                        false,
+                        false,
+                        Optional.empty(),
+                        Optional.empty(),
+                        20.0,
+                        Optional.empty(),
+                        Optional.empty(),
+                        Map.of(),
+                        List.of()),
                     Mockito.mock(DataSchema.class)),
-            new SearchableFieldSpec(
+                new SearchableFieldSpec(
                     Mockito.mock(PathSpec.class),
-                    new SearchableAnnotation("textFieldOverride",
-                            SearchableAnnotation.FieldType.WORD_GRAM,
-                            true, true, false, false,
-                            Optional.empty(), Optional.empty(), 3.0,
-                            Optional.empty(), Optional.empty(), Map.of(), List.of()),
-                    Mockito.mock(DataSchema.class)))
-    );
+                    new SearchableAnnotation(
+                        "textFieldOverride",
+                        SearchableAnnotation.FieldType.WORD_GRAM,
+                        true,
+                        true,
+                        false,
+                        false,
+                        Optional.empty(),
+                        Optional.empty(),
+                        3.0,
+                        Optional.empty(),
+                        Optional.empty(),
+                        Map.of(),
+                        List.of()),
+                    Mockito.mock(DataSchema.class))));
 
-    fieldConfigs = TEST_CUSTOM_BUILDER.getStandardFields(ImmutableList.of(TestEntitySpecBuilder.getSpec(), mockEntitySpec));
-    // Same 22 from the original entity + newFieldNotInOriginal + 3 word gram fields from the textFieldOverride
+    fieldConfigs =
+        TEST_CUSTOM_BUILDER.getStandardFields(
+            ImmutableList.of(TestEntitySpecBuilder.getSpec(), mockEntitySpec));
+    // Same 22 from the original entity + newFieldNotInOriginal + 3 word gram fields from the
+    // textFieldOverride
     assertEquals(fieldConfigs.size(), 27);
-    assertEquals(fieldConfigs.stream().map(SearchFieldConfig::fieldName).collect(Collectors.toSet()), Set.of(
+    assertEquals(
+        fieldConfigs.stream().map(SearchFieldConfig::fieldName).collect(Collectors.toSet()),
+        Set.of(
             "nestedArrayArrayField",
             "esObjectField",
             "foreignKey",
@@ -476,13 +600,25 @@ public class SearchQueryBuilderTest extends AbstractTestNGSpringContextTests {
             "customProperties.delimited")); // customProperties.delimited Saas only
 
     // Field which only exists in first one: Should be the same
-    assertEquals(fieldConfigs.stream().filter(field -> field.fieldName().equals("nestedForeignKey")).findFirst().map(SearchFieldConfig::boost), Optional.of(
-            1.0F));
+    assertEquals(
+        fieldConfigs.stream()
+            .filter(field -> field.fieldName().equals("nestedForeignKey"))
+            .findFirst()
+            .map(SearchFieldConfig::boost),
+        Optional.of(1.0F));
     // Average boost value: 10 vs. 20 -> 15
-    assertEquals(fieldConfigs.stream().filter(field -> field.fieldName().equals("keyPart1")).findFirst().map(SearchFieldConfig::boost), Optional.of(
-            15.0F));
+    assertEquals(
+        fieldConfigs.stream()
+            .filter(field -> field.fieldName().equals("keyPart1"))
+            .findFirst()
+            .map(SearchFieldConfig::boost),
+        Optional.of(15.0F));
     // Field which added word gram fields: Original boost should be boost value averaged
-    assertEquals(fieldConfigs.stream().filter(field -> field.fieldName().equals("textFieldOverride")).findFirst().map(SearchFieldConfig::boost), Optional.of(
-            2.0F));
+    assertEquals(
+        fieldConfigs.stream()
+            .filter(field -> field.fieldName().equals("textFieldOverride"))
+            .findFirst()
+            .map(SearchFieldConfig::boost),
+        Optional.of(2.0F));
   }
 }
