@@ -6,15 +6,15 @@ import com.datahub.authorization.AuthUtil;
 import com.datahub.authorization.AuthorizerChain;
 import com.datahub.authorization.ConjunctivePrivilegeGroup;
 import com.datahub.authorization.DisjunctivePrivilegeGroup;
-import io.datahubproject.openapi.util.ElasticsearchUtils;
 import com.google.common.collect.ImmutableList;
 import com.linkedin.metadata.authorization.PoliciesConfig;
 import com.linkedin.metadata.systemmetadata.SystemMetadataService;
+import io.datahubproject.openapi.util.ElasticsearchUtils;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
-import org.opensearch.client.tasks.GetTaskResponse;
 import org.json.JSONObject;
+import org.opensearch.client.tasks.GetTaskResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
@@ -28,11 +28,12 @@ import org.springframework.web.bind.annotation.InitBinder;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-
 @RestController
 @RequestMapping("/operations/elasticSearch")
 @Slf4j
-@Tag(name = "ElasticSearchOperations", description = "An API for managing your elasticsearch instance")
+@Tag(
+    name = "ElasticSearchOperations",
+    description = "An API for managing your elasticsearch instance")
 public class OperationsController {
   private final AuthorizerChain _authorizerChain;
 
@@ -51,26 +52,36 @@ public class OperationsController {
   public void initBinder(WebDataBinder binder) {
     binder.registerCustomEditor(String[].class, new StringArrayPropertyEditor(null));
   }
+
   @GetMapping(path = "/getTaskStatus", produces = MediaType.APPLICATION_JSON_VALUE)
   public ResponseEntity<String> getTaskStatus(String task) {
     Authentication authentication = AuthenticationContext.getAuthentication();
     String actorUrnStr = authentication.getActor().toUrnStr();
-    DisjunctivePrivilegeGroup orGroup = new DisjunctivePrivilegeGroup(ImmutableList.of(new ConjunctivePrivilegeGroup(
-        ImmutableList.of(PoliciesConfig.GET_ES_TASK_STATUS_PRIVILEGE.getType())
-    )));
-    if (restApiAuthorizationEnabled && !AuthUtil.isAuthorizedForResources(_authorizerChain, actorUrnStr, List.of(java.util.Optional.empty()), orGroup)) {
-      return ResponseEntity.status(HttpStatus.FORBIDDEN).body(
-          String.format(actorUrnStr + " is not authorized to get ElasticSearch task status"));
+    DisjunctivePrivilegeGroup orGroup =
+        new DisjunctivePrivilegeGroup(
+            ImmutableList.of(
+                new ConjunctivePrivilegeGroup(
+                    ImmutableList.of(PoliciesConfig.GET_ES_TASK_STATUS_PRIVILEGE.getType()))));
+    if (restApiAuthorizationEnabled
+        && !AuthUtil.isAuthorizedForResources(
+            _authorizerChain, actorUrnStr, List.of(java.util.Optional.empty()), orGroup)) {
+      return ResponseEntity.status(HttpStatus.FORBIDDEN)
+          .body(String.format(actorUrnStr + " is not authorized to get ElasticSearch task status"));
     }
     if (!ElasticsearchUtils.isTaskIdValid(task)) {
-      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(
-          String.format("Task ID should be in the form nodeId:taskId e.g. aB1cdEf2GHI-JKLMnoPQr3:123456 (got %s)", task));
+      return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+          .body(
+              String.format(
+                  "Task ID should be in the form nodeId:taskId e.g. aB1cdEf2GHI-JKLMnoPQr3:123456 (got %s)",
+                  task));
     }
-    String nodeIdToQuery =  task.split(":")[0];
+    String nodeIdToQuery = task.split(":")[0];
     long taskIdToQuery = Long.parseLong(task.split(":")[1]);
-    java.util.Optional<GetTaskResponse> res = _systemMetadataService.getTaskStatus(nodeIdToQuery, taskIdToQuery);
+    java.util.Optional<GetTaskResponse> res =
+        _systemMetadataService.getTaskStatus(nodeIdToQuery, taskIdToQuery);
     if (res.isEmpty()) {
-      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(String.format("Could not get task status for %s:%d", nodeIdToQuery, taskIdToQuery));
+      return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+          .body(String.format("Could not get task status for %s:%d", nodeIdToQuery, taskIdToQuery));
     }
     GetTaskResponse resp = res.get();
     JSONObject j = new JSONObject();
